feat(swagger): Removed graphqlExample (breaks lint) and added ENABLE_SWAGGER
